# customer-churn-xai

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
configs/: data.yaml  eval.yaml  features.yaml  model.yaml
docker/: Dockerfile.api  Dockerfile.dashboard
src/churn_xai/api/: cli.py  main.py
src/churn_xai/models/: evaluate.py  train.py
src/churn_xai/serve/: app.py
src/churn_xai/viz/: cli.py  dashboard.py
src/viz/: dashboard.py
tests/: test_api.py  test_features.py  test_ingest.py
