[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "customer-churn-xai"
version = "0.1.0"
description = "End-to-end churn prediction with explanations, API, and dashboard."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "polars>=0.20",
  "scikit-learn>=1.4",
  "xgboost>=2.0",
  "shap>=0.48",
  "numba>=0.60",
  "pydantic>=2.7",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "streamlit>=1.37",
  "mlflow>=2.14",
  "requests>=2.32.5",
  "typer>=0.17.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.5", "black>=24.8", "mypy>=1.11", "types-PyYAML"]

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","SIM"]

[tool.black]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[project.scripts]
churn-xai = "churn_xai.ingest:app"

[tool.hatch.build.targets.wheel]
packages = ["src/churn_xai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
